--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -127,7 +127,7 @@ li{
 .categoryNameShow{
     border: 1px solid rgb(50, 54, 28);
     padding: 5px;
-    font-size: .85rem;
+    font-size: .8rem;
     border-radius: 8px;
 }
 #listArea .liDiv:hover,.iterativeDiv, .liDiv:hover{
@@ -364,7 +364,8 @@ background-color: rgb(220, 200, 96);
 }
 
 .listElem{
-    font-size: .8rem;
+    font-size: .9rem;
+    text-overflow: ellipsis;
 }
 .miniDiv{
     display: flex;
