--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -224,6 +224,7 @@ background-color: rgb(220, 200, 96);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
 
 .material-symbols-rounded{
@@ -374,3 +375,6 @@ background-color: rgb(220, 200, 96);
 }
 
 
+.add-cate-title{
+    margin: 3px;
+}
