--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+:root{
+    --defFont: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
+
 *{
-    font-family: "Lato", sans-serif;
+    font-family: var(--defFont);
     scroll-behavior: smooth;
     padding: 0;
     margin: 0;
     box-sizing:border-box;
 }
-:root{
-    --defFont:  "Lato", sans-serif;
-}
-
 
 body,.headTitle{
     margin: 0;
@@ -225,6 +226,7 @@ background-color: rgb(220, 200, 96);
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    align-items: center;
 }
 
 .material-symbols-rounded{
