--- a/TODOLIST/CSS/sidebar.css
+++ b/TODOLIST/CSS/sidebar.css
@@ -19,6 +19,33 @@
     margin-bottom: 2rem;
 
 }
+.settingMenu>.material-symbols-outlined{
+    transition: 200ms all ease-in-out;
+    user-select: none;
+}
+.settingsIconActive{
+    rotate: 90deg;
+}
+.settingMenuName{
+    user-select: none;
+    margin: .2em;
+}
+.toBeHiddenAfterCollapse.settingMenu{
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    border: 1px solid #1e1f20;
+    transition: 200ms all ease-in-out;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 5px;
+
+}
+.toBeHiddenAfterCollapse.settingMenu:hover{
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+    background-color: #2a2a2a;
+}
+
 .menuBar .navbar ul,
 .iconOfCategoryAdd{
     display: flex;
@@ -109,7 +136,9 @@
 .logout{
     display: flex;
     justify-content: center;
-    align-items: end;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .activeCategoryInSideBar{
@@ -168,3 +197,38 @@
     padding-right: 90px;
     border: none;
 } 
+
+.settingOptionPopupWrapper{
+    position: absolute;
+    margin-left: 26.6rem;
+}
+
+.settingOptionPopup{
+    flex-direction: column;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width:11em;
+    margin-bottom: 2em;
+    transition: 200ms ease-in-out all;
+    user-select: none;
+    display: flex;
+}
+
+.changeNameSettings:hover{
+    background-color: #2a2a2a;
+
+}
+.changeNameSettings{
+    background-color: #1e1f20;
+    display: flex;
+    padding: .2em;
+    padding-right: 10px;
+    align-items: center;
+    border: none;
+    border-radius: 4px;
+}
+.iconOfEditSetting{
+    margin-top: 5px;
+}
