--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -284,7 +284,7 @@ background-color: rgb(220, 200, 96);
     transform: translate(-50%, -50%);
     height: 100vh;
     width: 100%;
-    backdrop-filter: blur(5px);
+    background-color: #0d0d0e78; 
     color: white;
 }
 #newCategoryForm label{
