--- a/TODOLIST/CSS/customSelect.css
+++ b/TODOLIST/CSS/customSelect.css
@@ -5,14 +5,18 @@
   
   select {
     appearance: none;
-    /*  safari  */
+    
     -webkit-appearance: none;
     /*  other styles for aesthetics */
+    background-image: url('arrowdown.svg');
+    background-repeat: no-repeat; /* Custom arrow example */
+    background-position: right;
     width: 100%;
+    background-color: #131314;
+    border: 1px solid #2c2c2c;
+    min-width: 15em;
     font-size: 1rem;
-    background-color: #fff;
-    border: 1px solid #caced1;
-    border-radius: 0.25rem;
-    color: #000;
+    border-radius: 0.4rem;
+    color: white;
     cursor: pointer;
   }
