--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -50,10 +50,13 @@ select{
 }
 
 .MainAll .formMain #usrVal{
+    background-color: #131314;
+    color: white;
     padding: 1em;
     height: 2.6rem;
     font-size: 1.12em;
     border: 1px solid transparent;
+    border: 1px solid #2c2c2c;
     border-radius: 4px;
     width: 28rem;
 }
@@ -63,11 +66,10 @@ select{
 
 .warning{
     margin: 10px 10px 0 10px;
-    border: 1px solid gray;
+    border: none;
     padding: 6px;
-    color: black;
-    border-radius: 10px;
-    background: rgb(227, 224, 0);
+    border-radius: 6px;
+    background: rgb(16, 37, 60);
 }
 .liDiv button{
     margin: 5px;
@@ -84,14 +86,11 @@ select{
     border: none;
     cursor: pointer;
 }
-.checkIcon:hover,.checkIcon.material-symbols-outlined:hover{
-    color: rgb(10, 227, 230);    
-}
-#preAddBtn:hover{
-    color: rgb(232, 255, 22);
-    border-radius: 100px;
-}
 
+.checkIcon:hover,.checkIcon.material-symbols-outlined:hover{
+    transition: all ease-out .3s;
+    color: rgb(0, 197, 122);   
+}
 .btnTypeB{
     background-color: #dc4c3e;
     padding: 10px;
@@ -144,8 +143,8 @@ li{
 .listElemCate{
     background-color: rgb(28, 22, 22);
     display: flex;
-justify-content: center;
-margin: 10px;
+    justify-content: center;
+    margin: 10px;
 }
 
 
@@ -261,10 +260,11 @@ background-color: rgb(220, 200, 96);
 
 
 .AddCategoryPopUP #newCategoryForm{ 
-    border: 1px solid rgb(46, 39, 17);
+    border: 1px solid rgb(26, 32, 34);
     background-color: rgb(10, 21, 20);
     height: 15rem;
     width: 25rem;
+    padding: 10px;
     border-radius: 1.7em;
     display: flex;
     justify-content: center;
@@ -357,18 +357,35 @@ background-color: rgb(220, 200, 96);
     font-size: .99rem;
 }
 .listElem:hover{
-    color: rgb(255, 251, 169);
+    color: rgb(103, 211, 2);
 }
 .miniDiv{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-
 .add-cate-title{
     margin: 3px;
 }
 .warningCateSection{
     text-align: center;
+}
+.noCateWarningArea{
+    padding: 10px;
+    border: 1px solid rgb(45, 39, 23);
+    border-radius: 10px;
+    font-size: 1.2em;
+    background-color: #0d0d0e78;
+    box-shadow: 0px 0px 10px rgb(45, 39, 23);
+}
+
+.versionInfo{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
+    background-color: #070a0c;
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
 }
