Add padding to select element and fix console log statements

--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -84,6 +84,7 @@ select{
     background-color: transparent;
     color: white;
     border: none;
+    padding:5px 12px;
     cursor: pointer;
 }
 
