--- a/TODOLIST/CSS/mobileui.css
+++ b/TODOLIST/CSS/mobileui.css
@@ -110,6 +110,8 @@
     .btnMobileMenu{
         background-color: transparent;
         border: none;
+        scale: 1.3;
+        margin-right: 8px;
         margin-top: .3em;
         color: white;
     }
