--- a/TODOLIST/CSS/mobileui.css
+++ b/TODOLIST/CSS/mobileui.css
@@ -110,10 +110,12 @@
     .btnMobileMenu{
         background-color: transparent;
         border: none;
-        scale: 1.3;
         margin-right: 8px;
         margin-top: .3em;
         color: white;
+    }
+    .btnMobileMenu > .material-symbols-outlined{
+        scale: 1.2;
     }
     .menuBarContainer{
         display: none;
