--- a/TODOLIST/CSS/sidebar.css
+++ b/TODOLIST/CSS/sidebar.css
@@ -12,11 +12,12 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    color: white;
+    color: var(--default-text-color);
     display: flex;
+    border-right: var(--def-sidebar-border);
     flex-direction: column;
     flex-wrap: wrap;
-    background-color: #1e1f20;
+    background-color: var(--default-bg-color-sidebar);
     transition: .2s all ease-in-out;
 }
 .toAreaOFCL{
@@ -62,7 +63,8 @@
 
 
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
-    background-color: #2a2a2a;
+    background-color: var(--def-hover-bg-popups);
+    color: white;
 }
 
 .menuBar .navbar ul,
@@ -100,6 +102,7 @@
     background-color: rgb(54, 54, 54);
 }
 .hTagForTitleOfCategory{
+    color: var(--default-text-color);
     border-bottom: 1px solid rgb(255, 95, 95);
     padding: 10px;
 }
@@ -107,6 +110,7 @@
     display: flex;
     justify-content: space-between;
     border-radius: 10px;
+    color: white;
     background-color: rgb(28, 50, 55);
     padding: 10px;
     text-align: center;
@@ -209,6 +213,9 @@
 .popup-container-min-rename-section-inside{
     display: flex;
 }
+.delRenMenuIcons{
+    color: var(--default-text-color-popups) !important;
+}
 .popup-container-min,.popup-container-min-rename-section{
     cursor: pointer;
     height: 2rem;
@@ -218,7 +225,7 @@
     padding: 1em;
     align-items: center;
     transition: 200ms ease-in-out all;
-    background-color: #1e1f20;
+    background-color: var(--def-bg-popups);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
 }
@@ -232,13 +239,14 @@
 }
 .arrow-back{
     margin: .3em;
+    color: var(--default-text-color);
     transform: scale(1.3);
     user-select: none;
     transition: ease-in-out all 200ms;
     cursor: pointer;
 }
 .arrow-back:hover{
-    color: aliceblue;
+    color: #828f1e;
 }
 .arrow-back:active{
     transform: scale(1.2);
@@ -272,21 +280,27 @@
     display: flex;
 }
 
-.changeNameSettings:hover{
-    background-color: #2a2a2a;
+.changeNameSettings:hover,.themeSettings:hover{
+    background-color: var(--def-hover-bg-popups);
 
 }
-.changeNameSettings{
-    background-color: #1e1f20;
+
+.changeNameSettings,.themeSettings{
+    background-color: var(--def-bg-popups);
     display: flex;
+    color: var(--default-text-color-popups);
     padding: .2em;
+    margin: .1em;
+    min-height: 2em;
     padding-right: 10px;
+    min-width: 11em;
     align-items: center;
     border: none;
     border-radius: 4px;
 }
 
-.iconOfEditSetting{
+.iconOfEditSetting >.material-symbols-outlined{
+    color: var(--default-text-color-popups) !important;
     margin-top: 5px;
 }
 .logoutBtnIcon{
