--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -1,9 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-:root{
-    --defFont: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('./vars.css');
 *{
     font-family: var(--defFont);
     scroll-behavior: smooth;
@@ -15,7 +11,8 @@
 body,.headTitle{
     margin: 0;
     scroll-behavior: smooth;
-    background-color: #131314;
+    background-color: var(--default-bg-color);
+    color: var(--default-text-color);
 }
 .headTitle{
     margin: 15px;
@@ -31,7 +28,7 @@ body,.headTitle{
 }
 
 select{
-    border: 1px solid rgb(41, 38, 8);
+    border: 1px solid #2c2c2c;
     padding: 4px;
     border-radius: 5px;
     height: 5.3vh;
@@ -49,13 +46,12 @@ select{
 }
 
 .MainAll .formMain #usrVal{
-    background-color: #131314;
-    color: white;
+    background-color: var(--default-bg-color);
+    color: var(--default-text-color);
     padding: 1em;
     height: 2.6rem;
     font-size: 1.12em;
-    border: 1px solid transparent;
-    border: 1px solid #2c2c2c;
+    border: 1px solid #243540;
     border-radius: 4px;
     width: 110%;
 }
@@ -86,7 +82,9 @@ select{
     padding:5px 12px;
     cursor: pointer;
 }
-
+.material-symbols-outlined {
+    color: var(--default-text-color);
+}
 .checkIcon:hover,.checkIcon.material-symbols-outlined:hover{
     transition: all ease-out .3s;
     color: rgb(0, 197, 122);   
@@ -119,8 +117,8 @@ li{
     align-items: center;
     margin: 5px;
     transition: .2s all linear;
-    color: white;
-    border: 1px solid rgb(29, 22, 22);
+    color: var(--default-text-color);
+    border: 1px solid var(--default-border-color);
     text-overflow: ellipsis;
     height: auto;
     width: 100vh;
@@ -139,8 +137,9 @@ li{
 }
 
 .listElemCate{
-    background-color: rgb(28, 22, 22);
+    background-color: var(--default-bg-color);
     display: flex;
+    color: var(--default-text-color);
     justify-content: center;
     margin: 10px;
 }
@@ -192,7 +191,7 @@ li{
     border-radius: 5px;
     transition: .2s all linear;
     color: white;
-    background-color: rgb(46, 35, 23);
+    background-color: var(--default-bg-color);
     cursor: pointer;
 }
 .btnShow:hover{
@@ -205,12 +204,16 @@ background-color: rgb(220, 200, 96);
 
 /* new user view css ends here  */
 
-
+.preAddSectionParent,#preAddBtn{
+    color: var(--default-text-color);
+}
 .totalTaskCount{
+    color: var(--default-text-color) !important;
     margin: 10px;
 }
 .titleOfNewCategory{
     font-size: 1.5em;
+    color: var(--default-text-color);
     margin-bottom: 7px;
     text-align: center;
 }
@@ -259,7 +262,7 @@ background-color: rgb(220, 200, 96);
 
 .AddCategoryPopUP #newCategoryForm{ 
     border: 1px solid rgb(26, 32, 34);
-    background-color: rgb(10, 21, 20);
+    background-color: var(--default-bg-color);
     height: 15rem;
     width: 25rem;
     padding: 10px;
@@ -395,4 +398,24 @@ background-color: rgb(220, 200, 96);
     color: white;
     padding: 5px;
     border-radius: 10px;
+}
+
+.toggleThemeBtn{
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    color: rgb(238, 241, 205);
+}
+
+:root:has(#light:checked){
+    --default-bg-color: #f9f9fc;
+    --default-text-color: rgb(11, 9, 9);
+    --default-border-color: rgb(253, 231, 231);
+    --default-bg-color-sidebar: #f9f9fc;
+    --def-sidebar-border: 1px solid rgb(123, 152, 185);
+    --def-hover-bg-popups: #303067;
+    --def-bg-popups: #111124;
 }
