--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('./vars.css');
+:root{
+    --defFont: "Hanken Grotesk", sans-serif;
+    --default-bg-color: #131314;
+    --default-bg-color-sidebar: #1e1f20;
+    --default-text-color: white;
+    --default-border-color: rgb(29, 22, 22);
+    --def-sidebar-border:none;      
+    --def-hover-bg-popups:#2a2a2a;
+    --default-text-color-popups:white;
+    --def-bg-popups:#1e1f20;
+}
 *{
     font-family: var(--defFont);
     scroll-behavior: smooth;
