--- a/TODOLIST/CSS/todo.css
+++ b/TODOLIST/CSS/todo.css
@@ -110,7 +110,8 @@ select{
 }
 
 .btnTypeB:hover{
-    background-color: #ae2b1f;
+    transition: all 400ms ease-in-out;
+    background-color: #5d0a03;
 }
 
 li{
