--- a/CSS/buttons.css
+++ b/CSS/buttons.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
 .btnTypeA {
     cursor: pointer;
-    margin-bottom: 7px;
-    transition: all 0.5s ease-in-out;
-    padding: 10px 20px 10px 20px;
-    border: 1px solid gray;
-    border-radius: 5px 5px 8px 8px;
-    background-color: rgb(244, 248, 8);
-    color: black;
-    font-family: 'Signika Negative', sans-serif;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    height: 3em;
+    min-width: fit-content;
+    padding: 3px;
+    margin-bottom: 3px;
+    width: 5em;
+    border: none;
+    color: white;
+    background-color: #007bff;
+    font-family: "Hanken Grotesk", sans-serif;
 }
 .btnTypeA:hover {
-    box-shadow:inset 2px 37px  black;
-    background-color: white;
-    border-radius:10px;
-    color: white;
+    background-color:  #0056b3;
 }
 
 #chkBtn{
