--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,16 +1,18 @@
 .footer {
-    display: flex;
-    bottom: 0;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 10vh;
-    background-color: #000000;
-    color: #fff; 
-    text-align: center;
-    margin-top: 10vh;
-    padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  bottom: 0;
+  background-color: #000000;
+  color: #fff;
+  position: absolute;
+  text-align: center;
+  padding: 15px;
+  box-sizing: border-box;
 }
-.footer.Index{
-    margin-top: 15vh;
+
+.footer.Index {
+  margin-top: 15vh;
 }
