--- a/CSS/inputs.css
+++ b/CSS/inputs.css
@@ -1,6 +1,13 @@
 input {
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid grey;
+    width: 20em;
+    outline: none;
     border-radius: 4px;
+}
+.submissionDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .2em;
 }
