--- a/CSS/tables.css
+++ b/CSS/tables.css
@@ -1,13 +1,37 @@
-table tr {
-    margin: 10px;
-}
-
-td,
-th {
-    border: 1px solid white;
-    padding: 10px;
-    background-color: black;
-    color: white;
-    font-size: 15px;
-    text-align: center;
-}
+#output {
+    width: max-content; 
+    margin: 20px auto;
+    font-family: 'Arial', sans-serif;
+  }
+  
+  .result-table {
+    border-collapse: collapse;
+    width: 100%; /* Make the table responsive */
+    max-width: 600px; /* Optional: Set a maximum width */
+    background-color: #2a3039; 
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2); /* Refined shadow */
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .result-table th {
+    background-color: #31363F; 
+    color: #eeeeee; 
+    padding: 12px 15px;
+    text-align: left;
+  }
+  
+  .result-table td {
+    border-bottom: 1px solid #31363F; 
+    padding: 10px 15px;
+    color: #ddd;
+  }
+  
+  .result-table tr:nth-child(even) {
+    background-color: #242930;
+  }
+  
+  .result-table tr:hover {
+    background-color: #383f4b;
+  }
+  
