--- a/CSS/container.css
+++ b/CSS/container.css
@@ -9,12 +9,10 @@
   border: none;
   border-radius: 2em;
   width: 35rem;
-  height: 65vh;
+  min-height: 65vh;
+  margin:40px  auto;
   color: white;
-  background-size: 100% 100%;
   background-color: #222831;
-  margin-top: 50px;
-  margin-left: auto;
   padding: auto;
   margin-right: auto;
 }
@@ -26,6 +24,9 @@
 th,
 td {
   padding: 10px 30px;
+}
+.container > div{
+  margin: 0;
 }
 .errorArea{
   font-style: italic;
