--- a/CSS/inputs.css
+++ b/CSS/inputs.css
@@ -1,13 +1,17 @@
 input {
     padding: 10px;
-    margin-bottom: 20px;
     width: 20em;
     outline: none;
     border-radius: 4px;
 }
+
 .submissionDiv{
     display: flex;
-    justify-content: center;
+    margin-bottom: 10px;
     align-items: center;
-    gap: .2em;
+}
+.btnDiv{
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
 }
