--- a/CSS/weatherPage.css
+++ b/CSS/weatherPage.css
@@ -3,7 +3,8 @@
     justify-content: center;
     width: 100%;
     padding: 10px;
-    color: black;
+    color: white;
+    font-size: 1.3rem !important;
     border-radius: 5px;
 }
 input{
